# bytecode_assembly

./: Cargo.toml  Readme.md  app.basm  app.basmo  output.basmo
src/: compile.rs  execute.rs  main.rs  token.rs  value.rs
src/compile/: code.rs  error.rs
src/token/: argument.rs
tests/: add.basm  comments.basm  div.basm  mov.basm  mul.basm  output.basm  sub.basm
tests/branching/: count_up_down.basm  infinite.basm  prime_generator.basm
tests/math/: modulo.basm
