[package]
name = "byte_assembly"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple programming language compiled to byecode"
readme = "Readme.md"
keywords = ["programming-language", "bytecode"]
categories = ["programming-language"]
repository = "https://github.com/41Leahcim/bytecode_assembly"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
postcard = { version = "1.0.8", features = ["use-std"] }
serde = { version = "1.0.188", features = ["derive"] }
